--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="scripts.js"></script>
+    <script src="newScripts.js"></script>
   </body>
 </html>
